# graduate_work

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
services/auth/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  broken_file.py  docker-compose.tests.local.yml  docker-compose.yml  pyproject.toml
services/auth/auth-service/: Dockerfile  alembic.ini  entrypoint.sh  gunicorn_conf.py  main.py  migrations.py  requirements.txt
services/auth/auth-service/docs/: openapi_auth_api_doc.yaml
services/auth/configs/: nginx.conf
services/auth/configs/confd/: site.conf
services/auth/docs/: openapi_auth_api_doc.yaml
services/auth/src/: alembic.ini  entrypoint.sh  gunicorn_conf.py  main.py
services/auth/src/api/: __init__.py
services/auth/src/core/: logger.py  settings.py
services/auth/src/db/: postgres.py
services/auth/src/helpers/: lifespan.py  providers.py  wait_for_it.py  wait_for_services.py
services/auth/src/migrations/: env.py  run.py
services/auth/src/models/: __init__.py  db_entity.py  mixins.py  oauth.py
services/auth/src/schemas/: model.py  ugc_endpoints.py
services/auth/src/services/: admin_roles.py  authentication.py  base.py  helper.py  jwt_token.py  pagination.py  redis.py  registration.py
services/auth/tests/functional/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
services/billing/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/billing/docs/: db_diagram.puml  sequence_diagram_adj.puml
services/billing/docs/system_design/: data_storage_and_security.md  error_handling.md  logging_and_monitoring.md  subscription_auto_renewal.md
services/billing/src/: alembic.ini  entrypoint.sh  gunicorn_conf.py  main.py  workers_entrypoint.sh
services/billing/src/api/: __init__.py
services/billing/src/broker/: __init__.py  kafka_admin.py  kafka_producer.py
services/billing/src/core/: config.py  exceptions.py  logger.py  settings.py
services/billing/src/db/: __init__.py  postgres.py  redis.py
services/billing/src/helpers/: exempt_endpoints.py  lifespan.py  middleware.py  wait_for_app.py  wait_for_services.py
services/billing/src/interfaces/: repositories.py
services/billing/src/message_broker/: kafka.py
services/billing/src/migrations/: env.py
services/billing/src/models/: pg.py
services/billing/src/repositories/: __init__.py  redis.py
(+183 files in other folders)
